--- a/config/database.yml
+++ b/config/database.yml
@@ -48,8 +48,7 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: takujin_search_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+<<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
